log
Thu 16 May 2024 09:37:14 PM UTC: 
 tests:  0|5
total_score: 0/70
dcb5b5f
Thu 16 May 2024 09:49:53 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:17: error: unused variable ‘nuevo_estado’ [-Werror=unused-variable]
   61 |           Node *nuevo_estado = copy(n);
      |                 ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6014a38
Thu 16 May 2024 09:51:21 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:17: error: unused variable ‘nuevo_estado’ [-Werror=unused-variable]
   61 |           Node *nuevo_estado = copy(n);
      |                 ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
24e29f5
Thu 16 May 2024 09:53:34 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
4e50cab
Thu 16 May 2024 09:55:05 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ab85e6d
Thu 16 May 2024 09:55:37 PM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
1bf12b6
Thu 16 May 2024 10:14:31 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: unused variable ‘arr2’ [-Werror=unused-variable]
   49 |   int arr2[10];
      |       ^~~~
sudoku.c:48:7: error: variable ‘arr1’ set but not used [-Werror=unused-but-set-variable]
   48 |   int arr1[10];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
8d5f75b
Sat 18 May 2024 01:12:45 PM UTC: 
 sudoku.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
72b1594
Sat 18 May 2024 01:23:46 PM UTC: 
 sudoku.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0f133b5
Sat 18 May 2024 01:24:58 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4d2ddbe
Sat 18 May 2024 01:25:28 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:83:22: error: ‘k’ undeclared (first use in this function)
   83 |       int fil = 3 * (k / 3) + (p / 3);
      |                      ^
sudoku.c:83:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
762e5d3
Sat 18 May 2024 01:27:28 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
e928133
